Revert "feat: optimized jenkins"
This reverts commit 42f04bbdfcf6fc6c746d944696dfa86af39d817c.